# docs/swagger.json
@@ -13,7 +13,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "upload-api"
+                    "file-api"
                 ],
                 "summary": "初始化分片上传",
                 "parameters": [
@@ -47,13 +47,10 @@
         "/api/upload/mergePart": {
             "post": {
                 "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
+                    "application/x-www-form-urlencoded"
                 ],
                 "tags": [
-                    "upload-api"
+                    "file-api"
                 ],
                 "summary": "合并分片",
                 "parameters": [
@@ -65,11 +62,13 @@
                         "required": true
                     },
                     {
-                        "type": "string",
                         "description": "文件Id",
                         "name": "fileId",
-                        "in": "query",
-                        "required": true
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 ],
                 "responses": {
@@ -85,7 +84,7 @@
                     "multipart/form-data"
                 ],
                 "tags": [
-                    "upload-api"
+                    "file-api"
                 ],
                 "summary": "上传分片",
                 "parameters": [
@@ -107,14 +106,14 @@
                         "type": "string",
                         "description": "分片序号",
                         "name": "fileId",
-                        "in": "query",
+                        "in": "formData",
                         "required": true
                     },
                     {
                         "type": "integer",
                         "description": "文件Id",
                         "name": "chunkNum",
-                        "in": "query",
+                        "in": "formData",
                         "required": true
                     }
                 ],
